syntax = "proto3";

package auth;

// Сервис аутентификации и управления пользователями
service AuthService {
  rpc SignIn (SignInRequest) returns (AuthResponse) {}
  rpc SignUp (SignUpRequest) returns (AuthResponse) {}
  rpc FindAllUsers (FindAllUsersRequest) returns (UserListResponse) {}
  rpc GetProfile (GetProfileRequest) returns (User) {}
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignUpRequest {
  string email = 1;
  string password = 2;
  UserName name = 3;
  optional uint32 role_id = 4;
}

message FindAllUsersRequest {
  optional string name_filter = 1;
}


message GetProfileRequest {
  uint32 user_id = 1;
}

message UserName {
  string first_name = 1;
  string second_name = 2;
  string middle_name = 3;
}

message AuthResponse {
  string access_token = 1;
}

message UserListResponse {
  repeated User users = 1;
}

message User {
  uint32 id = 1;
  string first_name = 2;
  string second_name = 3;
  string middle_name = 4;
  string password = 5;
  string email = 6;
  uint32 role_id = 7;
}

message Error { 
  string message = 1;
  uint32 code = 2;     
  optional string stack_trace = 3;
}
